--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
 </head>
 
 <body>
-    
+    <header>
+         <div class="header-left">
+            <h2 id="logotext">MakuCodez</h2>
+         </div>
+
+         <div class="header-right">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Projects</a></li>
+            </ul>
+         </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
