--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <header>
+    <!-- First Header -->
+    <header class="header-up">
          <div class="header-left">
             <h2 id="logotext">MakuCodez</h2>
          </div>
@@ -16,16 +17,28 @@
          <div class="header-right">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="">About Me</a></li>
                 <li><a href="">Projects</a></li>
             </ul>
          </div>
     </header>
+    <!-- Second Header -->
+    <header class="header-down">
+        <div class="header-left">
+            <h1>This website is <br> awesome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt recusandae, incidunt, esse autem natus commodi dolorem modi vitae rerum perferendis voluptas dolor quos repellat, ab voluptatem eveniet a dolorum magni.</p>
+            <button class="signup">Sign Up</button>
+        </div>
 
+        <div class="header-right">
+            <img src="./Images/AntiCoding.webp" alt="An Image that is about me or coding"> 
+        </div>
+    </header>
+    <!-- Content -->
     <main>
 
     </main>
-
+    <!-- Footer -->
     <footer>
 
     </footer>
