Modified header comments
So that I can clearly know which is the main and subheader

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- First Header -->
+    <!-- Main Header -->
     <header class="header-up">
          <div class="header-left">
             <h2 id="logotext">MakuCodez</h2>
@@ -22,7 +22,7 @@
             </ul>
          </div>
     </header>
-    <!-- Second Header -->
+    <!-- Subheader -->
     <header class="header-down">
         <div class="header-left">
             <h1>This website is <br> awesome</h1>
