Added footer and some element of the main content

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             </ul>
          </div>
     </header>
+
     <!-- Subheader -->
     <header class="header-down">
         <div class="header-left">
-            <h1>This website is <br> awesome</h1>
+            <p id="heromain">This website is awesome</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt recusandae, incidunt, esse autem natus commodi dolorem modi vitae rerum perferendis voluptas dolor quos repellat, ab voluptatem eveniet a dolorum magni.</p>
             <button class="signup">Sign Up</button>
         </div>
@@ -34,13 +35,21 @@
             <img src="./Images/AntiCoding.webp" alt="An Image that is about me or coding"> 
         </div>
     </header>
+
     <!-- Content -->
     <main>
+        <div class="content-main">
+            
+        </div>
 
+        <div class="content-quote">
+
+        </div>
     </main>
+
     <!-- Footer -->
     <footer>
-
+        Copyright © The Odin Project 2023
     </footer>
 </body>
 
