Added body information part

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- Main Header -->
     <header class="header-up">
          <div class="header-left">
-            <h2 id="logotext">MakuCodez</h2>
+            <p id="logotext">MakuCodez</p>
          </div>
 
-         <div class="header-right">
+         <div class="header-upright">
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About Me</a></li>
@@ -26,24 +26,32 @@
     <!-- Subheader -->
     <header class="header-down">
         <div class="header-left">
-            <p id="heromain">This website is awesome</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt recusandae, incidunt, esse autem natus commodi dolorem modi vitae rerum perferendis voluptas dolor quos repellat, ab voluptatem eveniet a dolorum magni.</p>
+            <p id="heromain">This website is <br>awesome</p>
+            <p id="herotext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button class="signup">Sign Up</button>
         </div>
 
         <div class="header-right">
-            <img src="./Images/AntiCoding.webp" alt="An Image that is about me or coding"> 
+            <img src="./Images/HeaderImage.png" alt="An Image that is about me or coding"> 
         </div>
     </header>
 
     <!-- Content -->
     <main>
+        <p id="information">Some random information.</p>
         <div class="content-main">
-            
+            <div class="outbox"><div class="box"></div><p class="content-text">this is some subtext under an illustration or image</p></div>
+            <div class="outbox"><div class="box"></div><p class="content-text">this is some subtext under an illustration or image</p></div>
+            <div class="outbox"><div class="box"></div><p class="content-text">this is some subtext under an illustration or image</p></div>
+            <div class="outbox"><div class="box"></div><p class="content-text">this is some subtext under an illustration or image</p></div>
         </div>
 
         <div class="content-quote">
-
+            <p>This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
+                All I know is that it looks nice.
+            </p>
+            <p>-Thor, God of Thunder</p>
         </div>
     </main>
 
