Added content signup part

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <div class="header-upright">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">About Me</a></li>
+                <li><a href="">About</a></li>
                 <li><a href="">Projects</a></li>
             </ul>
          </div>
@@ -26,9 +26,9 @@
     <!-- Subheader -->
     <header class="header-down">
         <div class="header-left">
-            <p id="heromain">This website is <br>awesome</p>
+            <p id="heromain">This website is awesome</p>
             <p id="herotext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button class="signup">Sign Up</button>
+            <button class="signuphead">Sign Up</button>
         </div>
 
         <div class="header-right">
@@ -52,6 +52,18 @@
                 All I know is that it looks nice.
             </p>
             <p class="who"">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="content-action">
+            <div class="signup">
+                <div class="signup-left">
+                    <p class="maintxt">Call to action! It's time!</p>
+                    <p class="subtxt">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="signup-right">
+                    <button class="signupbtn">Sign up</button>
+                </div>
+            </div>
         </div>
     </main>
 
